docs sidebar nav collapse component ssr fixes

--- a/src/css/docs/components/docs-sidebar.css
+++ b/src/css/docs/components/docs-sidebar.css
@@ -393,6 +393,10 @@
   transform: rotate(90deg) translate3d(-.1em, 0, 0);
 }
 
+.DocsSidebar--nav-item-collapse-container.DocsSidebar--nav-item-collapse-hidden {
+  height: 0;
+}
+
 .DocsSidebar--nav-item-collapse-content {
   opacity: 0;
   transform: translate3d(-.5em, 0, 0);
